[project]
name = 's3path'
dynamic = ['version', 'description']
requires-python = '>=3.9'
authors = [{name = 'Lior Mizrahi', email = 'li.mizr@gmail.com'}]
maintainers = [{name = 'Lior Mizrahi', email = 'li.mizr@gmail.com'}]
readme = {file = 'README.txt', content-type = 'text/x-rst'}
license = {file = 'LICENSE', text = 'Apache 2.0'}
dependencies = [
    'boto3>=1.16.35',
    'smart-open>=5.1.0',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[project.urls]
Homepage = 'https://github.com/liormizr/s3path'
Documentation = 'https://github.com/liormizr/s3path?tab=readme-ov-file'
Repository = 'https://github.com/liormizr/s3path.git'
Issues = 'https://github.com/liormizr/s3path/issues'
Releases = 'https://github.com/liormizr/s3path/releases'

[project.optional-dependencies]
dev = [
    'moto',
    'pytest',
    'sphinx',
    'twine',
    'pytest-cov',
    'ipython',
    'ipdb',
    's3path'
]

[build-system]
requires = ['setuptools>=61.2']
build-backend = 'setuptools.build_meta'

[tool.distutils.bdist_rpm]
doc-files = 'LICENSE README.rst'

[tool.setuptools]
packages = ['s3path']
license-files = ['LICENSE']
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 's3path.__version__'}
description = {file = 'REAMDE.rst', content-type = 'text/x-rst'}
